# BrightRoom

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  copy_libraw.sh
scripts/: fetch_halide.ps1  fetch_halide.sh
src/: loader.cpp  main.cpp  main_window.cpp
src/app/: CMakeLists.txt  main.cpp  main_window.cpp  main_window.h
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MySlider.cpp  main.cpp  main_window.cpp  main_window.h  my_slider.cpp  my_slider.h
src/lib/: CMakeLists.txt  generator.cpp  halide_pipeline.h  halide_pipeline_gen.h  loader.cpp  loader.h  pipeline.cpp  pipeline.h  raw_loader.cpp  raw_loader.h  types.h
src/lib/pipeline/: bayer_color.h  black_level.h  demosaic_bilinear.h  exposure.h  halide_pipeline.h  tone_mapping.h  white_balance.h  white_level.h
src/pipeline/: CMakeLists.txt  HalideRawPipeline.cpp  HalideRawPipeline.h  IRawPipeline.h  RawLoader.cpp  RawLoader.h  classic_pipeline.cpp  classic_pipeline.h  generator.cpp  pipeline.cpp  pipeline.h  types.h
src/pipeline/halide/: functions.h  generator.cpp
test/: loader_test.cpp
